# insertionfinder

./: .gitignore  .gitmodules  LICENSE  Makefile.am  README.md  configure.ac
data/algorithms/: .gitignore  2C2E.txt  2x2CP.txt  2x2EP.txt  3CP-large.txt  3CP-normal.txt  3CP-pure.txt  3CP.txt  3CP3EP.txt  3EP.txt  C-other.txt  CO.txt  E-other.txt  EO.txt  Makefile.am  center.txt  generate.sh  no-parity-other.txt  parity.txt  slice.txt
data/algorithms/extras/: Makefile.am  no-parity-other.txt  parity.txt
data/algorithms/slices/: Makefile.am  basic.txt
include/: Makefile.am  algorithm.hpp  case.hpp  cube.hpp  formula.hpp
include/fallbacks/: filesystem.hpp  optional.hpp
include/finder/: brute-force.hpp  finder.hpp  greedy.hpp
include/insertionfinder/: algorithm.hpp  case.hpp  cube.hpp  insertion.hpp  twist.hpp  utils.hpp
include/insertionfinder/fallbacks/: filesystem.hpp  optional.hpp
include/insertionfinder/finder/: brute-force.hpp  finder.hpp  greedy.hpp
include/insertionfinder/improver/: improver.hpp  slice.hpp
src/: Makefile.am  algorithm.c  algorithm.h  cube.c  cube.h  formula.c  formula.h  init.c  init.h  main.c  main.cpp
src/algorithm/: Makefile.am  algorithm-generating.cpp  algorithm.c  algorithm.cpp  algorithm.h  formula.c  insertion.cpp  utils.hpp
src/case/: Makefile.am  case.cpp
src/cli/: Makefile.am  commands.hpp  generate.cpp  improve.cpp  parser.cpp  parser.hpp  search.cpp  utils.cpp  utils.hpp  verify.cpp
src/cli/univalue/: Makefile.am
src/commands/: Makefile.am  commands.h  generate-algfile.c  parser.c  parser.h  solve.c  utils.c  utils.h  verify.c  verify.h
src/cube/: Makefile.am  center.cpp  common.h  cube.c  cube.cpp  cube.h  cycle.cpp  cycles.c  twist.cpp  twists.c  utils.hpp
src/data-structure/: Makefile.am  hash-map.c  hash-map.h  linked-list.c  linked-list.h  utils.h
src/finder/: Makefile.am  brute-force-worker.cpp  brute-force.cpp  finder.c  finder.cpp  finder.h  greedy-worker.cpp  greedy.cpp  insertion.c  utils.hpp  worker.c
src/formula/: Makefile.am  algorithm.cpp  formula.c  formula.cpp  formula.h  insertion.c  insertion.cpp  utils.c  utils.h  utils.hpp
src/improver/: Makefile.am  improver.cpp  slice-worker.cpp  slice.cpp
src/insertion/: Makefile.am  insertion.cpp  multi-insertion.cpp  solution.cpp
src/twist/: Makefile.am  rotation.cpp  twist.cpp
src/utils/: Makefile.am  encoding.cpp  encoding.hpp  io.c  io.h  memory.c  memory.h
test/: Makefile.am  algorithm.cpp
