nobase_include_HEADERS = \
    insertionfinder/fallbacks/filesystem.hpp \
    insertionfinder/fallbacks/optional.hpp \
    insertionfinder/algorithm.hpp \
    insertionfinder/case.hpp \
    insertionfinder/cube.hpp \
    insertionfinder/finder/brute-force.hpp \
    insertionfinder/finder/finder.hpp \
    insertionfinder/finder/greedy.hpp
