nobase_include_HEADERS = \
    insertionfinder/fallbacks/filesystem.hpp \
    insertionfinder/algorithm.hpp \
    insertionfinder/case.hpp \
    insertionfinder/config.h \
    insertionfinder/cube.hpp \
    insertionfinder/insertion.hpp \
    insertionfinder/twist.hpp \
    insertionfinder/utils.hpp \
    insertionfinder/finder/brute-force.hpp \
    insertionfinder/finder/finder.hpp \
    insertionfinder/finder/greedy.hpp \
    insertionfinder/improver/improver.hpp \
    insertionfinder/improver/slice.hpp
